test/language/spec/pipeline/invalid/pipeline_type_mismatch.topo
// TEST: pipeline references undeclared node function
// EXPECT-ERROR: undeclared

namespace app {
  public:
    void run();
    fn run {
      load -> transform;
      transform -> void;
    }

  protected:
    void load();
    // transform is NOT declared
}
